# efi-wrapper

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  config.h.in  gdb.py
efi-wrapper/: CMakeLists.txt  main.c
efi-wrapper/efi/: CMakeLists.txt  context.c  handles.c  service.c
efi-wrapper/efi/data/: CMakeLists.txt  boot_services.c  dxe_services.c  hob_data.c  mem_type.c  runtime_services.c  system_table.c
efi-wrapper/efi/protocols/: CMakeLists.txt  timestamp.c  unicode_collation.c
efi-wrapper/efi/protocols/device_path/: utils.c
efi-wrapper/efi/protocols/graphics_output/: fb.c  gop.c  internal.h  memory.c  modes.c  sdl2.c  vnc.c
efi-wrapper/efi/protocols/hii/: cfg_routing.c  database.c  font.c  image.c  string.c
efi-wrapper/efi/protocols/simple_file_system/: internal.h  posix-fd.c  utils.c
efi-wrapper/efi/protocols/simple_text/: escape.c  internal.h  posix-fd.c
efi-wrapper/efi/tables/: CMakeLists.txt  address.c  capsule.c  configuration.c  controller.c  dxe.c  event.c  handles.c  image.c  internal.h  memory.c  protocol.c  time.c  variable.c
efi-wrapper/loader/: CMakeLists.txt  crash.c  execute.c  fake_ins.c  fake_ins_aarch64.c  file.c  image.c  loader.c  parser.c  pe.c  print.c  running.c  string.c  symbol.c
include/: defines.h  list.h  logger.h  mem.h  path.h  pe.h  tlsf.h  udisasm.h
include/efi/: boot_services.h  device_path.h  dxe_services.h  efi_context.h  efi_file.h  efi_hii.h  efi_spec.h  efi_status.h  efi_string.h  efi_template.h  efi_types.h  efi_wrapper.h  runtime_services.h  system_table.h
include/efi/guids/: file_info.h  hob_list.h  mem_type_info.h
include/efi/protocols/: absolute_pointer.h  arp.h  block_io.h  component_name.h  device_path.h  device_path_utils.h  disk_info.h  disk_io.h  dns_v4.h  dns_v6.h  driver_binding.h  graphics_output.h  hash.h  hash2.h  hii_config_routing.h  hii_database.h  hii_font.h  hii_image.h  hii_string.h  ip_v4.h  ip_v4_config.h  ip_v4_config2.h  ip_v6.h  ip_v6_config.h  load_file.h  load_file2.h  loaded_image.h  managed_network.h  pci_io.h  reset.h  reset_notification.h  rng.h  security.h  security2.h  security_policy.h  serial_io.h  simple_filesystem.h  simple_network.h  simple_pointer.h  simple_text_input.h  (+12 more)
lib/: CMakeLists.txt  logger.c  mem.c
lib/efi/: CMakeLists.txt  char16.c  device_path.c  guid.c  string.c  utils.c
lib/general/: CMakeLists.txt  crc32.c  list.c  path.c  readable.c
lib/linux/: CMakeLists.txt  audit_arch.c  signal.c
libs/: CMakeLists.txt
libs/tlsf/: CMakeLists.txt  tlsf.c
libs/udisasm/: CMakeLists.txt  aarch64.h  udisasm.c
